# sophia

./: .gitignore  Cargo.toml  README.md  sophia.pyperf  sophia.sln
lib/macros/: Cargo.toml
lib/utils/: Cargo.toml
sophia/: aletheia.py  aletheia.sophia  arche.py  backup.py  core.py  examples.sophia  expressions.sophia  harmonia.py  hemera.py  iris.py  kadmos.py  kleio.json  kleio.py  main.sophia  mathos.py  metis.py  plan.txt  rationals.py  run.py  runtime.py  sophia.py  sophia.pyproj  statements.sophia  test.py  test.sophia  types.sophia
sophia/harmonia/: test01.sophia  test01.sph  test02.sophia  test02.sph  test03.sophia  test03.sph  test04.sophia  test04.sph  test05.sph  test06.sph  test07.sph  test08.sophia  test08.sph  test09.sph  test10.sophia  test10.sph  test11.sph  test12.sophia  test12.sph  test13.sophia  test13.sph  test14.sophia  test14.sph  test15.sophia  test15.sph  test16.sophia  test16.sph  test17.sophia  test17.sph  test18.sph  test19.sph  test20.sophia  test20.sph  test21.sophia  test21.sph  test23.sph  test24.sph  test25.sph  test26.sph
sophia/sophia/: hemera.py  kadmos.py  main.sophia  main.sph  metis.py  runtime.py  task.py  test.sph
sophia/user/: main.sph  test.sph
src/: main.rs
src/datatypes/: functions.rs  methods.rs  mod.rs  range.rs  tests.rs  types.rs
src/internal/: instructions.rs  lexer.rs  mod.rs  nodes.rs  patterns.rs  tests.rs  tokens.rs
src/sophia/: arche.rs  hemera.rs  kadmos.rs  mod.rs  runtime.rs  tests.rs
src/stdlib/: builtins.rs  kleio_old.json  mod.rs  operators.rs
tests/: SI.md
user/: main.sph
(+31 files in other folders)
